<resources>
    <string name="app_name">Easy Park</string>
    <string name="search_hint">Search</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="tel">Telephone</string>
    <string name="picture">Picture</string>
    <string name="info">Information</string>
    <string name="location">Location</string>
    <string name="add_pic">Add Picture</string>
    <string name="finish">Finish</string>
    <string name="dashboard">Dashboard</string>
    <string name="plateno">Number Plate</string>
    <string name="vehicle">Vehicle</string>
    <string name="parkrate">Rate: %1d</string>
    <string name="parks">Parks</string>
    <string name="login">Login</string>
    <string name="preferences_filename">com.gilboot.EasyPark.MySharedPreferences</string>
    <string name="signout">Signout</string>
    <string name="password">Password</string>
    <string name="drivers">Driver</string>
    <string name="todo">TODO</string>
    <string name="park">Park</string>
    <string name="driver">Driver</string>
    <string name="park_info">Park Information</string>
    <string name="driver_info">Driver Information</string>
    <string name="choose">Choose</string>
    <string name="submit">Submit</string>
    <string name="driverlogin">Driver Login</string>
    <string name="create_account">Create account</string>
    <string name="parklogin">Park Login</string>
    <string name="driversignup">Driver Signup</string>
    <string name="parkname">Park Name</string>
    <string name="parksignup">Park Signup</string>
    <string name="register">Register</string>
    <string name="register_park">Register Park</string>
    <string name="park_register_notice">Make sure you are inside your park before registering it so we can pick its location</string>
    <string name="number_plate">Number Plate</string>
    <string name="add">Add</string>
    <string name="visit">Visit</string>
    <string name="parklocation">Park Location</string>
    <string name="capacity">Capacity</string>
    <string name="scan">String</string>
    <string name="reserve">RESERVE</string>
    <string name="go_to_map">go to map</string>
    <string name="call">Call</string>
    <string name="reserve_list">Reservations</string>
    <string name="qr_code">QR Code</string>
    <string name="reserve_label">Reservation</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
</resources>