<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chooseFragment">

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.gilboot.easypark.signup.SignupFragment"
        android:label="@string/signup"
        tools:layout="@layout/frag_signup">
        <action
            android:id="@+id/action_signupFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <action
            android:id="@+id/action_signupFragment_to_driverInfoFragment"
            app:destination="@id/driverInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.gilboot.easypark.park.registration.InfoFragment"
        android:label="@string/park_info"
        tools:layout="@layout/frag_info_reg">
        <action
            android:id="@+id/action_infoFragment_to_pictureFragment"
            app:destination="@id/pictureFragment" />
        <argument
            android:name="park"
            app:argType="com.gilboot.easypark.data.Park" />
    </fragment>
    <fragment
        android:id="@+id/pictureFragment"
        android:name="com.gilboot.easypark.park.registration.PictureFragment"
        android:label="@string/picture"
        tools:layout="@layout/frag_picture_reg">
        <action
            android:id="@+id/action_pictureFragment_to_locationFragment"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.gilboot.easypark.park.registration.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/frag_location_reg">
        <action
            android:id="@+id/action_locationFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/locationFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.gilboot.easypark.park.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/frag_dashboard_park" />
    <fragment
        android:id="@+id/driverInfoFragment"
        android:name="com.gilboot.easypark.driver.registration.InfoFragment"
        android:label="@string/driver_info"
        tools:layout="@layout/frag_info_driver_reg">
        <action
            android:id="@+id/action_driverInfoFragment_to_vehicleFragment"
            app:destination="@id/vehicleFragment" />
        <argument
            android:name="driver"
            app:argType="com.gilboot.easypark.data.Driver" />
    </fragment>
    <fragment
        android:id="@+id/vehicleFragment"
        android:name="com.gilboot.easypark.driver.registration.VehicleFragment"
        android:label="@string/vehicle"
        tools:layout="@layout/frag_vehicle_driver_reg">
        <action
            android:id="@+id/action_vehicleFragment_to_parksFragment"
            app:destination="@id/parksFragment"
            app:popUpTo="@id/vehicleFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/parksFragment"
        android:name="com.gilboot.easypark.driver.parks.ParksFragment"
        android:label="@string/parks"
        tools:layout="@layout/frag_parks" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.gilboot.easypark.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/frag_login">
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_parksFragment"
            app:destination="@id/parksFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/chooseFragment"
        android:name="com.gilboot.easypark.choose.ChooseFragment"
        android:label="@string/choose"
        tools:layout="@layout/frag_choose">
        <action
            android:id="@+id/action_chooseFragment_to_driverloginFragment"
            app:destination="@id/driverloginFragment" />
        <action
            android:id="@+id/action_chooseFragment_to_parkloginFragment"
            app:destination="@id/parkloginFragment" />
    </fragment>

    <fragment
        android:id="@+id/driverloginFragment"
        android:name="com.gilboot.easypark.driverlogin.DriverloginFragment"
        android:label="@string/driverlogin"
        android:layout="@layout/frag_driverlogin">
        <action
            android:id="@+id/action_driverloginFragment_to_parksFragment"
            app:destination="@id/parksFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_driverloginFragment_to_driversignupFragment"
            app:destination="@id/driversignupFragment" />
    </fragment>

    <fragment
        android:id="@+id/parkloginFragment"
        android:name="com.gilboot.easypark.parklogin.ParkloginFragment"
        android:label="@string/parklogin"
        android:layout="@layout/frag_parklogin">
        <action
            android:id="@+id/action_parkloginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_parkloginFragment_to_parksignupFragment"
            app:destination="@id/parksignupFragment" />
    </fragment>
    <fragment
        android:id="@+id/driversignupFragment"
        android:name="com.gilboot.easypark.driversignup.DriversignupFragment"
        android:label="@string/driversignup"
        android:layout="@layout/frag_driversignup">
        <action
            android:id="@+id/action_driversignupFragment_to_driverloginFragment"
            app:destination="@id/driverloginFragment" />
        <action
            android:id="@+id/action_driversignupFragment_to_parksFragment"
            app:destination="@id/parksFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/parksignupFragment"
        android:name="com.gilboot.easypark.parksignup.ParksignupFragment"
        android:label="@string/parksignup"
        tools:layout="@layout/frag_parksignup">
        <action
            android:id="@+id/action_parksignupFragment_to_parkinfoFragment"
            app:destination="@id/parkinfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/parkinfoFragment"
        android:name="com.gilboot.easypark.parkinfo.ParkinfoFragment"
        android:label="ParkinfoFragment"
        tools:layout="@layout/frag_parkinfo">
        <action
            android:id="@+id/action_parkinfoFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <argument
            android:name="park"
            app:argType="com.gilboot.easypark.data.Park" />
    </fragment>
</navigation>