<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_margin="@dimen/horizontal_margin"/>
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="@dimen/horizontal_margin"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_margin="@dimen/horizontal_margin"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:layout_margin="@dimen/horizontal_margin" />

        <!--        Image for the driver instructions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:src="@drawable/driver_work"
            android:layout_width="50pt"
            android:layout_weight="1"
            android:layout_height="50pt"
            android:id="@+id/driver_image"
            android:contentDescription="@string/todo" />

        <ImageView
            android:src="@drawable/park"
            android:layout_width="50pt"
            android:layout_weight="1"
            android:layout_height="50pt"
            android:id="@+id/parker_image"
            android:contentDescription="@string/todo" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:text="@string/drivers"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/parks"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</layout>