<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="parkinfoViewModel"
            type="com.gilboot.easypark.parksignup.ParkinfoViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dim_18"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:autofillHints=""
                android:hint="@string/email"
                android:text="@{parkinfoViewModel.emailLiveData}"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:text="@{parkinfoViewModel.passwordLiveData}"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/edit_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:autofillHints="@string/tel"
                android:hint="@string/tel"
                android:inputType="phone"
                android:text="@{parkinfoViewModel.telephoneLiveData}" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/horizontal_margin"
                android:text="@string/login"
                android:textColor="#3F51B5" />

        </LinearLayout>
    </ScrollView>
</layout>