<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.gilboot.easypark.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="@dimen/horizontal_margin"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!--        Image for the driver instructions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/driver_image"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="@{() -> loginViewModel.setToDriver() }"
                app:srcCompat="@drawable/driver_work" />

            <ImageView
                android:id="@+id/parker_image"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="@{() -> loginViewModel.setToPark() }"
                app:srcCompat="@drawable/park" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/driver_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{loginViewModel.isParkLiveData  ? false : true }"
                android:onClick="@{() -> loginViewModel.setToDriver() }"
                android:text="@string/driver" />

            <CheckBox
                android:id="@+id/park_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{ loginViewModel.isParkLiveData  ? true : false }"
                android:onClick="@{() -> loginViewModel.setToPark() }"
                android:text="@string/park" />
        </LinearLayout>
    </LinearLayout>
</layout>