<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="parkViewModel"
            type="com.gilboot.easypark.park.registration.ParkViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_normal"
        android:paddingTop="24dp"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="8dp"
            android:text="@{parkViewModel.parkLiveData.name}"
            android:textCursorDrawable="@null" />


        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:drawablePadding="5dp"
            android:hint="@string/tel"
            android:inputType="text"
            android:padding="8dp"
            android:text="@{parkViewModel.parkLiveData.tel}"
            android:textCursorDrawable="@null" />


        <Button
            android:id="@+id/btn_to_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>
</layout>