<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="parkViewModel"
            type="com.gilboot.easypark.park.ParkViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dim_18"
        android:gravity="center"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/add_picture"
            app:imageUrl="@{parkViewModel.parkLiveData.picture}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@{parkViewModel.parkLiveData.name}"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/spacing_large"
            tools:text="@string/parkname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@{String.valueOf(parkViewModel.parkLiveData.capacity)}"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/spacing_normal"
            tools:text="Capacity: 14 slots" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin"
            android:text="@{String.valueOf(parkViewModel.parkLiveData.capacity)}"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/spacing_normal"
            tools:text="Available slots: 3 slots" />


        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/reserve" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/go_to_map"

            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</layout>